JumpScript/tests/baselines/reference/unusedNamespaceInNamespace.errors.txt
tests/cases/compiler/unusedNamespaceInNamespace.jump(2,15): error TS6133: 'B' is declared but its value is never read.


==== tests/cases/compiler/unusedNamespaceInNamespace.jump (1 errors) ====
    namespace A {
        namespace B { }
                  ~
!!! error TS6133: 'B' is declared but its value is never read.
        export namespace C {}
    }